--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "apollo-server": "^3.12.0",
-    "graphql": "^16.6.0"
+    "dotenv": "^16.1.3",
+    "graphql": "^16.6.0",
+    "mongoose": "^7.2.2"
   }
 }
