feat: add method to add a new user

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_MONGO=mongodb+srv://<user>:<password>@cluster-course.eovplpq.mongodb.net/
+DB_MONGO=mongodb+srv://<user>:<password>@<cluster-host>/<database-name>
