--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.1.3",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2"
   }
 }
