--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DB_MONGO=mongodb+srv://<user>:<password>@<cluster-host>/<database-name>
 SECRET=<secret-to-generate-password-token>
+HASH=<hash-to-generate-password>
