--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A CRM based on GraphQL",
   "main": "index.js",
   "scripts": {
+    "preinstall": "nvm use",
     "dev": "nodemon index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
